fixed content cut off

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Flower_of_Life_Infinite_Pattern_Sacred_Geometry.png/777px-Flower_of_Life_Infinite_Pattern_Sacred_Geometry.png);
     font-family: monospace;
+    margin-bottom: 100px;
 }
 
 header{
